Stack using ArrayList is commited